sfdcDemo/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Process1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Age_TEXT__c</fullName>
        <formula>TEXT((6 * ( FLOOR( ( DateValue(Now())- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DateValue(Now())- DATE( 1900, 1, 8), 7 ) ) )
-
(6 * ( FLOOR( ( DateValue(Custom_Create_Date__c )- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DateValue(Custom_Create_Date__c ) - DATE( 1900, 1, 8), 7 ) ) )
) 
&amp;&quot;:&quot;&amp;
TEXT(FLOOR(MOD((( Custom_Closed_Date__c - Custom_Create_Date__c )*24),24)))&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(((Custom_Closed_Date__c - Custom_Create_Date__c)*1440),60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>(((6 * ( FLOOR( ( DateValue(Now()) - DATE( 1900, 1, 8)) / 7 )) + MIN(5, MOD(DateValue(Now())- DATE(1900, 1, 8), 7)))
-
(6 * ( FLOOR(( DateValue(Custom_Create_Date__c)- DATE(1900, 1, 8)) / 7 )) + 
MIN ( 5, MOD(DateValue(Custom_Create_Date__c) - DATE(1900, 1, 8), 7)))
)
+
( Custom_Closed_Date__c - Custom_Create_Date__c ))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age HRs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Closed_Date__c</fullName>
        <label>Custom Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Create_Date__c</fullName>
        <label>Custom Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Date__c</fullName>
        <label>Custom Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DATETIMEVALUE__c</fullName>
        <formula>DATETIMEVALUE(&quot;2014-06-11 16:29:00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATETIMEVALUE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DATEVALUE__c</fullName>
        <formula>DATEVALUE(Custom_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATEVALUE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE__c</fullName>
        <formula>DATE(1900, 1, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOD_SLA__c</fullName>
        <formula>IF(AND(MOD(TODAY()-DATE(1900,1,7),7)&lt; (NOW()   - CreatedDate),   ((NOW()   - CreatedDate)&lt;7)),((NOW()   - CreatedDate)-2) * 8, ((NOW()   - CreatedDate)-(2 * ((NOW()   - CreatedDate)/7))) * 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOD SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_NUMBER__c</fullName>
        <formula>(((6 * ( FLOOR( ( DATETIMEVALUE(Now()) - DATETIMEVALUE(&quot;2014-06-01 00:00:00&quot;) ) / 7 ) ) + MIN( 5, MOD( DATETIMEVALUE(Now())- DATETIMEVALUE(&quot;2014-06-01 00:00:00&quot;), 7 ) ) )
-
(6 * ( FLOOR( ( DATETIMEVALUE(Custom_Create_Date__c ) - DATETIMEVALUE(&quot;2014-06-01 00:00:00&quot;) ) / 7 ) ) + MIN( 5, MOD( DATETIMEVALUE(Custom_Create_Date__c ) - DATETIMEVALUE(&quot;2014-06-01 00:00:00&quot;), 7 ) ) )
))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA NUMBER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>CaseRecordType1</fullName>
        <active>true</active>
        <businessProcess>Case Process1</businessProcess>
        <label>CaseRecordType1</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>